k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: music-dashboard
  labels:
    name: music-dashboard
    author: akash
